# adv-backend-trainee-assignment

./: README.md
backend/: docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
backend/app/: manage.py
backend/app/ad_wall/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/app/ad_wall/migrations/: 0001_initial.py  0002_image_headline.py  0003_ad_created_on.py
backend/app/config/: settings.py  urls.py  yasg.py
