[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["RezuanDzibov <rezuan.dzbov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
flake8 = "^4.0.1"
flake8-bugbear = "^22.1.11"
flake8-builtins = "^1.5.3"
pep8-naming = "^0.12.1"
flake8-commas = "^2.1.0"
flake8-variables-names = "^0.0.4"
flake8-black = "^0.2.4"
flake8-comprehensions = "^3.8.0"
flake8-alphabetize = "^0.0.17"
flake8-cognitive-complexity = "^0.1.0"
flake8-annotations = "^2.7.0"
Django = "^4.0.3"
django-rest-framework = "^0.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
